# DSL-for-Data-Analysis

./: README.md
src/DataAnalysisDSL/: AbstractDataflow.cpp  AbstractDataflow.h  CMakeLists.txt  Comprehensions.cpp  Comprehensions.h  DSLASTConsumer.cpp  DSLASTConsumer.h  DSLASTFrontendAction.cpp  DSLASTFrontendAction.h  DSLASTVisitor.cpp  DSLASTVisitor.h  DataAnalysisDSL.cpp  DataBag.cpp  DataBag.h  DataSource.cpp  DataSource.h  Expression.cpp  Expression.h  Filter.cpp  Filter.h  ForListStmt.cpp  ForListStmt.h  JsonGenerator.cpp  JsonGenerator.h  ListADT.cpp  ListADT.h  Variable.cpp  Variable.h  main.cpp  utils.cpp  utils.h
test/: generic_groupBy.json  generic_groupby2.cpp  generic_selection.cpp  generic_selection.json
