add_clang_executable(find-class-decls
	main.cpp
	DataBag.h
	DataBag.cpp
    DataSource.h
	DataSource.cpp
	Variable.h
    Variable.cpp
	ForListStmt.h
	ForListStmt.cpp
    AbstractDataflow.h
    AbstractDataflow.cpp
    Comprehensions.h
	Comprehensions.cpp
	JsonGenerator.h
	JsonGenerator.cpp
	DSLASTConsumer.h
	DSLASTConsumer.cpp
	DSLASTFrontendAction.h
	DSLASTFrontendAction.cpp
	DSLASTVisitor.h
	DSLASTVisitor.cpp
	Filter.h
	Filter.cpp
	Expression.h
	Expression.cpp
	utils.h
	utils.cpp
)

target_link_libraries(find-class-decls 
	PRIVATE
	clangTooling
)

